<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Catroid: An on-device visual programming system for Android devices
  ~ Copyright (C) 2010-2018 The Catrobat Team
  ~ (<http://developer.catrobat.org/credits>)
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero General Public License as
  ~ published by the Free Software Foundation, either version 3 of the
  ~ License, or (at your option) any later version.
  ~
  ~ An additional term exception under section 7 of the GNU Affero
  ~ General Public License, version 3, is available at
  ~ http://developer.catrobat.org/license_additional_term
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:stretchColumns="*">

    <TableRow
        android:id="@+id/tableRow11"
        android:layout_width="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/formula_editor_keyboard_mathematics"
            style="@style/FormulaEditorCategoryButton"
            android:layout_marginStart="@dimen/key_margin"
            android:layout_marginTop="@dimen/key_margin"
            android:layout_span="3"
            android:text="@string/formula_editor_mathematics" />

        <Button
            android:id="@+id/formula_editor_keyboard_object"
            style="@style/FormulaEditorCategoryButton"
            android:layout_marginTop="@dimen/key_margin"
            android:layout_span="3"
            android:text="@string/formula_editor_object" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow12"
        android:layout_width="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/formula_editor_keyboard_text"
            style="@style/FormulaEditorCategoryButton"
            android:layout_marginStart="@dimen/key_margin"
            android:layout_span="3"
            android:text="@string/formula_editor_text"/>

        <Button
            android:id="@+id/formula_editor_keyboard_list"
            style="@style/FormulaEditorCategoryButton"
            android:layout_span="3"
            android:text="@string/formula_editor_list"/>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow13"
        android:layout_width="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/formula_editor_keyboard_sensors"
            style="@style/FormulaEditorCategoryButton"
            android:layout_marginStart="@dimen/key_margin"
            android:layout_span="2"
            android:text="@string/formula_editor_device" />

        <Button
            android:id="@+id/formula_editor_keyboard_logic"
            style="@style/FormulaEditorCategoryButton"
            android:layout_span="2"
            android:text="@string/formula_editor_logic" />

        <Button
            android:id="@+id/formula_editor_keyboard_data"
            style="@style/FormulaEditorCategoryButton"
            android:layout_span="2"
            android:text="@string/formula_editor_data" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_weight="1">


        <ImageButton
            android:id="@+id/al_button_toggle"
            style="@style/FormulaEditorToggleFunctionsButton"
            android:contentDescription="@string/formula_editor_image_button_description_functions_toggle"
            android:layout_marginStart="@dimen/key_margin"
            android:src="@drawable/ic_keyboard_toggle_caret_down" />

        <Button
            android:id="@+id/formula_editor_keyboard_7"
            style="@style/FormulaEditorKeyboardButton"
            android:layout_span="1"
            android:text="@string/number_7" />

        <Button
            android:id="@+id/formula_editor_keyboard_8"
            style="@style/FormulaEditorKeyboardButton"
            android:layout_span="1"
            android:text="@string/number_8" />

        <Button
            android:id="@+id/formula_editor_keyboard_9"
            style="@style/FormulaEditorKeyboardButton"
            android:layout_span="1"
            android:text="@string/number_9" />


        <ImageButton
            android:id="@+id/formula_editor_keyboard_delete"
            style="@style/FormulaEditorDeleteButton"
            android:layout_span="2"
            android:contentDescription="@string/formula_editor_image_button_description_delete"
            android:src="@drawable/ic_input_delete" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/formula_editor_keyboard_string"
            style="@style/FormulaEditorKeyboardButton"
            android:layout_span="1"
            android:layout_marginStart="@dimen/key_margin"
            android:text="@string/formula_editor_string" />

        <Button
            android:id="@+id/formula_editor_keyboard_4"
            style="@style/FormulaEditorKeyboardButton"
            android:layout_span="1"
            android:text="@string/number_4" />

        <Button
            android:id="@+id/formula_editor_keyboard_5"
            style="@style/FormulaEditorKeyboardButton"
            android:layout_span="1"
            android:text="@string/number_5" />

        <Button
            android:id="@+id/formula_editor_keyboard_6"
            style="@style/FormulaEditorKeyboardButton"
            android:layout_span="1"
            android:text="@string/number_6" />

        <Button
            android:id="@+id/formula_editor_keyboard_divide"
            style="@style/FormulaEditorKeyboardButton"
            android:layout_span="1"
            android:text="@string/formula_editor_operator_divide" />

        <Button
            android:id="@+id/formula_editor_keyboard_mult"
            style="@style/FormulaEditorKeyboardButton"
            android:layout_span="1"
            android:text="@string/formula_editor_operator_mult" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/formula_editor_keyboard_color_picker"
            style="@style/FormulaEditorKeyboardButton"
            android:layout_span="1"
            android:contentDescription="@string/formula_editor_image_button_description_color_picker"
            android:src="@drawable/ic_color_picker_tab_hsv"
            android:layout_marginStart="@dimen/key_margin" />

        <Button
            android:id="@+id/formula_editor_keyboard_1"
            style="@style/FormulaEditorKeyboardButton"
            android:layout_span="1"
            android:text="@string/number_1" />

        <Button
            android:id="@+id/formula_editor_keyboard_2"
            style="@style/FormulaEditorKeyboardButton"
            android:layout_span="1"
            android:text="@string/number_2" />

        <Button
            android:id="@+id/formula_editor_keyboard_3"
            style="@style/FormulaEditorKeyboardButton"
            android:layout_span="1"
            android:text="@string/number_3" />

        <Button
            android:id="@+id/formula_editor_keyboard_minus"
            style="@style/FormulaEditorKeyboardButton"
            android:layout_span="1"
            android:text="@string/formula_editor_operator_minus" />

        <Button
            android:id="@+id/formula_editor_keyboard_plus"
            style="@style/FormulaEditorKeyboardButton"
            android:layout_span="1"
            android:text="@string/formula_editor_operator_plus" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/formula_editor_keyboard_bracket_open"
            style="@style/FormulaEditorKeyboardButton"
            android:layout_marginStart="@dimen/key_margin"
            android:layout_span="1"
            android:text="@string/formula_editor_bracket_open" />

        <Button
            android:id="@+id/formula_editor_keyboard_bracket_close"
            style="@style/FormulaEditorKeyboardButton"
            android:layout_span="1"
            android:text="@string/formula_editor_bracket_close" />

        <Button
            android:id="@+id/formula_editor_keyboard_0"
            style="@style/FormulaEditorKeyboardButton"
            android:layout_span="1"
            android:text="@string/number_0" />

        <Button
            android:id="@+id/formula_editor_keyboard_decimal_mark"
            style="@style/FormulaEditorKeyboardButton"
            android:layout_span="1"
            android:text="@string/formula_editor_decimal_mark" />

        <Button
            android:id="@+id/formula_editor_keyboard_compute"
            style="@style/FormulaEditorComputeButton"
            android:layout_span="2"
            android:text="@string/formula_editor_compute" />

    </TableRow>
</TableLayout>
