...
    <string name="formula_editor_function_collides_with_color">touches color</string>
    <string name="formula_editor_function_collides_with_color_parameter" translatable="false">(\'#ff0000\')</string>
    <string name="formula_editor_function_color_touches_color">color touches color</string>
    <string name="formula_editor_function_color_touches_color_parameter" translatable="false">(\'#ff0000\',\'#00ff00\')</string>
    <string name="formula_editor_sensor_color_at_x_y">color at x y</string>
    <string name="formula_editor_sensor_color_at_x_y_parameter" translatable="false">(100,200)</string>
    <string name="formula_editor_sensor_x_acceleration">acceleration x</string>
    <string name="formula_editor_sensor_y_acceleration">acceleration y</string>
    <string name="formula_editor_sensor_z_acceleration">acceleration z</string>
    <string name="formula_editor_sensor_compass_direction">compass direction</string>
    <string name="formula_editor_sensor_latitude">latitude</string>
    <string name="formula_editor_sensor_longitude">longitude</string>
    <string name="formula_editor_sensor_location_accuracy">location accuracy</string>
...
    <string name="formula_editor_logic_greaterthan">&gt;</string>
    <string name="formula_editor_logic_and">and</string>
    <string name="formula_editor_logic_or">or</string>
    <string name="formula_editor_logic_not">not</string>
    <string name="formula_editor_logic_greaterequal">&#x2265;</string>
    <string name="formula_editor_logic_leserequal">&#x2264;</string>
    <string name="formula_editor_logic_equal">=</string>
    <string name="formula_editor_operator_mult">×</string>
    <string name="formula_editor_operator_plus">+</string>
    <string name="formula_editor_operator_minus">-</string>
    <string name="formula_editor_operator_divide">÷</string>
    <string name="formula_editor_operator_power">^</string>
    <string name="formula_editor_image_button_description_delete">delete</string>
...
